Ingree-with-static-IP/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-with-static-ip
  annotations: 
    kubernetes.io/ingress.global-static-ip-name: static-ip-name 
spec:
  backend:
    serviceName: svc-static-ip
    servicePort: 80
